# vcpkg_projects

cv_fps/: CMakeLists.txt  build.bat  build.sh  common.cpp  cv_fps.cpp  cv_utils.h  main.cpp  uvc_utils.cpp  uvc_utils.h  vcpkg.json
cv_fps/local_ports/opencv4/: portfile.cmake  vcpkg.json
